<resources>
    <string name="app_name">VFV_Hololens</string>
    <string name="addDataBtn">Add Dataset</string>
    <string name="openLogData">Open Log Data</string>
    <string name="deleteDataBtn">Delete Dataset</string>
    <string name="rename">Rename</string>
    <string name="renameTitle">Enter the new name</string>
    <string name="amplitudeRange">Clamp Amplitude</string>
    <string name="vorticity">Vorticity</string>
    <string name="colorMode">Color Mode</string>
    <string name="openDataset">Open Dataset</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="errorDatasets">No datasets available</string>
    <string name="connect">Connect</string>
    <string name="options">Options</string>
    <string name="serverIP">Server IP</string>
    <string name="hololensIP">Hololens IP</string>
    <string name="handedness">Handedness</string>
    <string name="openVTKTitle">Select the wanted fields</string>
    <string name="createSDTitle">Create a new Sub-Dataset</string>
    <string name="headsetColor">Headset color</string>
    <string name="pendingAnnotation">Anchor the annotation using the HMD</string>
    <string name="endTraining">End the training</string>
    <string name="selectPointing">Select the pointing</string>
    <string name="manualPointing">Manual technique</string>
    <string name="wimPointing">WIM technique</string>
    <string name="wimRayPointing">WIM+Ray technique</string>
    <string name="gogoPointing">GoGo technique</string>
    <string name="duplicateSD">Duplicate</string>
    <string name="removeSD">Remove</string>
    <string name="makePublicSD">Make Public</string>
    <string name="enableGradient">Enable Gradient</string>
    <string name="publicSD">Public</string>
    <string name="privateSD">Private</string>
    <string name="sdPrivacy">Privacy</string>
    <string name="colorRange">Color Range</string>
    <string name="transferFunction">Transfer Function</string>
    <string name="selection">Selection</string>
    <string name="startSelection">Start Selection</string>
    <string name="startSelectionTop">Start Selection From Top</string>
    <string name="endSelection">End Selection</string>
    <string name="cancelSelection">Cancel Selection</string>
    <string name="confirmSelection">Confirm Selection</string>
    <string name="selectSelectionMode">Select the Selection Mode</string>
    <string name="relativeFull">Relative Full</string>
    <string name="relativeAligned">Relative Aligned</string>
    <string name="absolute">Absolute</string>
    <string name="disableMap">Disable Map</string>
    <string name="enableMap">Enable Map</string>
    <string name="mergeWith">Merge With</string>
    <string name="interpolationParameter">t</string>
    <string name="constrained">Constrained</string>
    <string name="unConstrained">Unconstrained</string>
    <string name="reset">Reset</string>
    <string name="annotPositionColor">Color: </string>
    <string name="annotPositionDimension">Dimensions: </string>
    <string name="annotPositionFollowTime">Follow Time: </string>
    <string name="logAnnot">Logged annotations</string>
    <string name="canvasAnnot">Canvas annotation</string>
    <string name="openAnnotationLogs">Open an Annotation Log</string>
    <string name="errorAnnotationLogs">No annotation log available</string>
    <string name="annotLogHasHeader">Has header? </string>
    <string name="annotLogTimeHeader">Time header: </string>
    <string name="fileName">File name: </string>
    <string name="headers">Headers: </string>
    <string name="annotLogPosition">Position</string>
    <string name="depthClipping">Depth clipping value: </string>
    <string name="dataColumn">Data columns: </string>
    <string name="mapToData">Map color to data</string>
    <string name="saveSD">Save SubDataset</string>
    <string name="createSV">Create Subjective Group</string>
    <string name="createSVTitle">Create Subjective Group:</string>
    <string name="svType">Type of Subjective View:</string>
    <string name="removeSV">Remove Subjective Group</string>
    <string name="switchToSV">Switch to Personal View</string>
    <string name="switchToBase">Switch to Original View</string>
    <string name="mergeSV">Merge Subjective Views</string>
    <string name="unmergeSV">Unmerge Subjective Views</string>
    <string name="done">Done</string>
    <string name="toggleVolumetricMask">Toggle Mask</string>
    <string name="svMerge">Merge</string>
</resources>