<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/options_item"
        app:showAsAction="always"
        android:icon="@drawable/overflow_icon">
        <menu>
            <item android:id="@+id/connect_item"
                  app:showAsAction="ifRoom"
                  android:title="@string/connect"/>
            <item android:id="@+id/selectPointing_item"
                  android:title="@string/selectPointing"
                  app:showAsAction="ifRoom">
                <menu>
                    <group android:checkableBehavior="single">
                        <item android:id="@+id/manualPointing_item"
                            android:title="@string/manualPointing"/>
                        <item android:id="@+id/wimPointing_item"
                            android:title="@string/wimPointing"/>
                        <item android:id="@+id/wimRayPointing_item"
                            android:title="@string/wimRayPointing"/>
                        <item android:id="@+id/gogoPointing_item"
                            android:title="@string/gogoPointing"/>
                    </group>
                </menu>
            </item>
        </menu>
    </item>
</menu>