<?xml version="1.0" encoding="utf-8"?>

<!-- Main body Layout of screen (drawer will slide over this) -->
<android.support.v7.widget.GridLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/annotMainContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Previews -->
    <ScrollView
        app:layout_row="0"
        app:layout_rowWeight="1"
        app:layout_columnWeight="1"
        app:layout_column="0"
        android:background="@color/treeColor"
        android:layout_height="0px"
        android:layout_width="0px">

        android:textAlignment="center"
        <com.sereno.view.TreeView
            android:id="@+id/annotPreviewLayout"
            app:topOffsetPerChild="10px"
            app:leftOffsetPerLevel="25px"
            app:strokeWidth="3px"
            app:extendHeight="64px"
            app:extendWidth="64px"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:inExtendSrc="@drawable/in_expend"
            app:notExtendSrc="@drawable/not_expend"/>
    </ScrollView>

    <FrameLayout
        app:layout_column="1"
        app:layout_row="0"
        app:layout_rowWeight="1"
        app:layout_columnWeight="3"
        android:layout_height="0px"
        android:layout_width="0px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/annotPositionView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annotPositionDimension"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/annotPositionDimension"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/annotPositionFollowTime"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/annotPositionColor"/>

                <com.sereno.view.ColorPickerView
                    android:layout_height="75dp"
                    android:layout_width="75dp"
                    android:id="@+id/annotPositionColorPicker"
                    app:circleRadius="5dp"
                    app:pickerHueHeight="10dp"
                    app:pickerSpace="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Main Canvas View -->
        <RelativeLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:id="@+id/annotCanvasView"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/annotPendingView"
                android:text="@string/pendingAnnotation"
                android:textSize="32dp"
                android:gravity="center"/>

            <!-- Stroke/Text view -->
            <com.sereno.view.AnnotationCanvasView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/strokeTextView"
                app:fontSize="64"/>


            <!-- Button views -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="vertical"
                android:id="@+id/annotDrawButtons">

                <!-- Stroke parameters -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/annotationStrokeParamLayout"
                        android:orientation="horizontal">
                        <com.sereno.view.ColorPickerView
                            android:layout_height="100dp"
                            android:layout_width="100dp"
                            android:id="@+id/strokeColorPicker"
                            app:circleRadius="5dp"
                            app:pickerHueHeight="15dp"
                            app:pickerSpace="5dp"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/annotationStrokeParam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="64dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/color_palette"/>
                </LinearLayout>

                <!-- Text parameters -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/annotationTextParamLayout"
                        android:orientation="horizontal">
                        <com.sereno.view.ColorPickerView
                            android:layout_height="100dp"
                            android:layout_width="100dp"
                            android:id="@+id/textColorPicker"
                            app:circleRadius="5dp"
                            app:pickerHueHeight="15dp"
                            app:pickerSpace="5dp"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/annotationTextMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="64dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/text_mode"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/annotationImportImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="64dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/import_image"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</android.support.v7.widget.GridLayout>